--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Personal CSS -->
     <link rel="stylesheet" href="styles.css">
 
-    <title>Hello, world!</title>
+    <title>Spotify</title>
   </head>
 
   <body>
