--- a/index.html
+++ b/index.html
@@ -13,9 +13,71 @@
     <link rel="stylesheet" href="styles.css">
 
     <title>Spotify</title>
+    <link rel="icon" href="imagens/favicon.png">
   </head>
 
   <body>
+
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg text-white">
+      <div class="container">
+        <a href="#" class="navbar-brand">Spotify</a>
+
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-spotify" aria-controls="navbar-spotify">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="#navbar-spotify">
+          <ul class="navbar-nav ml-auto">
+            
+            <li class="nav-item">
+              <a href="#" class="nav-link text-white">Premium</a>
+            </li>
+
+            <li class="nav-item">
+              <a href="#" class="nav-link text-white">Ajuda</a>
+            </li>
+
+            <li class="nav-item">
+              <a href="#" class="nav-link text-white">Baixar</a>
+            </li>
+
+            <li class="nav-item">
+              <a href="#" class="nav-link text-white">Inscrever-se</a>
+            </li>
+
+            <li class="nav-item">
+              <a href="#" class="nav-link text-white">Entrar</a>
+            </li>
+
+          </ul>
+        </div>
+
+      </div>
+    </nav>
+
+    <section>
+      Seção 1
+    </section>
+
+    <section>
+      Seção 2
+    </section>
+
+    <section>
+      Seção 3
+    </section>
+
+    <section>
+      Seção 4
+    </section>
+
+    <section>
+      Seção 5
+    </section>
+
+    <footer>
+      Footer
+    </footer>
 
 
     <!-- Optional JavaScript -->
