espcamentos py-2 px-3, button

--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@
   <body>
 
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg text-white">
-      <div class="container">
+      <div class="container py-2">
         <a href="#" class="navbar-brand">Spotify</a>
 
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-spotify" aria-controls="navbar-spotify">
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-spotify" aria-controls="navbar-spotify">
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="#navbar-spotify">
+        <div class="collapse navbar-collapse" id="navbar-spotify">
           <ul class="navbar-nav ml-auto">
             
-            <li class="nav-item">
+            <li class="nav-item px-3">
               <a href="#" class="nav-link text-white">Premium</a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item px-3">
               <a href="#" class="nav-link text-white">Ajuda</a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item px-3">
               <a href="#" class="nav-link text-white">Baixar</a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item px-3">
               <a href="#" class="nav-link text-white">Inscrever-se</a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item pl-3">
               <a href="#" class="nav-link text-white">Entrar</a>
             </li>
 
