--- a/index.html
+++ b/index.html
@@ -53,29 +53,29 @@
         </div>
 
       </div>
-    </nav>
+    </nav> <!-- fim da navbar -->
 
-    <section>
+    <section class="bg-yellow py-5">
       Seção 1
     </section>
 
-    <section>
+    <section class="py-5">
       Seção 2
     </section>
 
-    <section>
+    <section class="bg-yellow py-5">
       Seção 3
     </section>
 
-    <section>
+    <section class="py-5">
       Seção 4
     </section>
 
-    <section>
+    <section class="bg-yellow py-5">
       Seção 5
     </section>
 
-    <footer>
+    <footer class="bg-dark py-5">
       Footer
     </footer>
 
