--- a/index.html
+++ b/index.html
@@ -54,9 +54,30 @@
 
       </div>
     </nav> <!-- fim da navbar -->
-
+    
+    <!-- Inicio das sections -->
     <section class="bg-yellow py-5">
-      Seção 1
+      <div id="spotify-slider" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner text-center">
+          <div class="carousel-item active">
+            <h1 class="display-2">Título Teste</h1>
+          </div>
+
+          <div class="carousel-item">
+            <h1 class="display-2">Título Teste2</h1>
+          </div>
+        </div>
+        
+        <a class="carousel-control-prev" href="#spotify-slider" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#spotify-slider" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Próximo</span>
+        </a>
+
+      </div>
     </section>
 
     <section class="py-5">
