--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav> <!-- fim da navbar -->
     
     <!-- Inicio das sections -->
-    <section class="bg-yellow py-5">
+    <section class="bg-yellow py-5 sectionp">
       <div id="spotify-slider" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner text-center">
           <div class="carousel-item active">
@@ -76,24 +76,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Próximo</span>
         </a>
-
       </div>
-    </section>
-
-    <section class="py-5">
-      Seção 2
-    </section>
-
-    <section class="bg-yellow py-5">
-      Seção 3
-    </section>
-
-    <section class="py-5">
-      Seção 4
-    </section>
-
-    <section class="bg-yellow py-5">
-      Seção 5
     </section>
 
     <footer class="bg-dark py-5">
