--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Personal CSS -->
     <link rel="stylesheet" href="styles.css">
 
-    <title>Spotify</title>
+    <title>Título</title>
     <link rel="icon" href="imagens/favicon.png">
   </head>
 
@@ -20,7 +20,7 @@
 
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg text-white">
       <div class="container py-2">
-        <a href="#" class="navbar-brand">Spotify</a>
+        <a href="#" class="navbar-brand">Logo</a>
 
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-spotify" aria-controls="navbar-spotify">
           <span class="navbar-toggler-icon"></span>
